Inclusión de fuente (Google Fonts - Roboto), iconografía (Font Awesome) y normalización (normalize.css)

--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Fascículo virtual</title>
+
+    <!-- CSS
+     ================================================== -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- ICONOGRAFÍA
+     ================================================== -->
+    <script src="https://use.fontawesome.com/e2c5df4de8.js"></script>
+
   </head>
   <body>
+
     <div class="container">
 
-      <!-- SECCIÓN NAVEGACIÓN -->
+      <!-- SECCIÓN NAVEGACIÓN
+       ================================================== -->
       <header>
-        <nav></nav>
+        <nav><i class="fa fa-bookmark fa-lg"></i></nav>
         <h1 class="fasc-title hidden">FASCÍCULO DIDÁCTICO PARA...</h1>
       </header>
 
-      <!-- SECCIÓN PORTADA -->
+      <!-- SECCIÓN PORTADA
+       ================================================== -->
       <!-- abstract = informative abstract -->
       <!-- summary = descriptive abstract -->
       <section class="fasc-cover-page">
@@ -27,21 +41,25 @@
         </div>
       </section>
 
-      <!-- SECCIÓN TEMÁTICA -->
+      <!-- SECCIÓN TEMÁTICA
+       ================================================== -->
       <section id="fasc-subject-1" class="fasc-subject">
-        <!-- SOPORTE TEÓRICO TEMÁTICA -->
+        <!-- SOPORTE TEÓRICO TEMÁTICA
+         ================================================== -->
         <article class="fasc-subject-info">
           <h2 class="fasc-lesson"></h2>
           <h3 class="fasc-subject-name"></h3>
           <div class="fasc-box-subject-info">
             <div class="fasc-subject-description">
               <!-- n * <p> -->
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore vitae voluptatum ipsam, nemo voluptate dignissimos quos obcaecati quas adipisci, aliquid accusamus autem illum ducimus eum, assumenda tempore reprehenderit consequuntur voluptatem.</p>
             </div>
             <div class="fasc-subject-media"></div>
           </div>
         </article>
 
-        <!-- SECCIÓN ACTIVIDADES -->
+        <!-- SECCIÓN ACTIVIDADES
+         ================================================== -->
         <article id="fasc-quiz-1" class="fasc-quizzes">
           <span class="quiz-instruction"></span>
           <div class="quiz-media-support"></div>
@@ -51,7 +69,8 @@
         </article>
       </section>
 
-      <!-- SECCIÓN AUTOEVALUACIÓN -->
+      <!-- SECCIÓN AUTOEVALUACIÓN
+       ================================================== -->
       <section class="fasc-feedback">
         <span class="number-questions"></span>
         <div class="fasc-box-questions">
@@ -76,5 +95,6 @@
         </div>
       </section>
     </div>
+    
   </body>
 </html>
