Estilo de SECCIÓN PORTADA. Generación de carpeta assets con imágenes para la respectiva sección.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <!-- SECCIÓN NAVEGACIÓN
        ================================================== -->
       <header>
-        <nav><i class="fa fa-bookmark fa-lg"></i></nav>
-        <h1 class="fasc-title hidden">FASCÍCULO DIDÁCTICO PARA...</h1>
+        <i class="fa fa-bookmark fa-lg"></i><h1 class="fasc-title hidden">FASCÍCULO DIDÁCTICO</h1>
+        <nav></nav>
       </header>
 
       <!-- SECCIÓN PORTADA
@@ -31,12 +31,14 @@
       <!-- abstract = informative abstract -->
       <!-- summary = descriptive abstract -->
       <section class="fasc-cover-page">
-        <div class="fasc-logo-school"></div>
+        <div class="fasc-logo-school">
+          <img src="assets/logo_iep.png" alt="">
+        </div>
         <div class="fasc-abstract">
           <div class="fasc-abstract-info">
-            <span class="academic-level"></span>
-            <span class="evaluation-time"></span>
-            <span class="author"></span>
+            <div class="fasc-abstract-info-box-element"><span class="academic-level">NIVEL SECUNDARIA</span></div>
+            <div class="fasc-abstract-info-box-element"><span class="evaluation-time">BLOQUE 4</span></div>
+            <div class="fasc-abstract-info-box-element"><span class="author">MARÍA TERESA PALESTINO MORALES</span></div>
           </div>
         </div>
       </section>
@@ -49,10 +51,9 @@
         <article class="fasc-subject-info">
           <h2 class="fasc-lesson"></h2>
           <h3 class="fasc-subject-name"></h3>
-          <div class="fasc-box-subject-info">
+          <div class="fasc-box-subject-info" >
             <div class="fasc-subject-description">
               <!-- n * <p> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore vitae voluptatum ipsam, nemo voluptate dignissimos quos obcaecati quas adipisci, aliquid accusamus autem illum ducimus eum, assumenda tempore reprehenderit consequuntur voluptatem.</p>
             </div>
             <div class="fasc-subject-media"></div>
           </div>
@@ -95,6 +96,6 @@
         </div>
       </section>
     </div>
-    
+
   </body>
 </html>
