Inclusión de Actividad 2 y 3 mediante <iframe>. Creación de quizzes: complete-word-quiz y true-false-quiz (con respectivos templates). Generación de archivo css quiz-style, por si los quizzes no se cargan mediante iframe y se incluye código de actividad directo (enlace de style.css mediante @import

--- a/quizzes/true-false-quiz.html
+++ b/quizzes/true-false-quiz.html
@@ -15,7 +15,7 @@
 
   * {  font-family: 'Roboto', sans-serif; }
 
-  .quiz-true-false-quiz {
+  .true-false-quiz {
     margin: 0 auto;
     width: 800px;
   }
@@ -40,7 +40,7 @@
           display: flex;
         }
           .statement-question {
-            font-size: 1.2em;
+            font-size: 1.1em;
           }
           .box-option-select-true-false, .box-statement-question {
             padding: 0.3em;
@@ -101,7 +101,7 @@
 
   <!-- QUIZ
    ================================================== -->
-  <div class="quiz-true-false-quiz">
+  <div class="true-false-quiz">
 
     <!-- QUIZ BOARD
      ================================================== -->
